Install SPE and SXA

--- a/run/sitecore-xm1/.env
+++ b/run/sitecore-xm1/.env
@@ -27,6 +27,8 @@ MANAGEMENT_SERVICES_IMAGE=scr.sitecore.com/sxp/modules/sitecore-management-servi
 HEADLESS_SERVICES_IMAGE=scr.sitecore.com/sxp/modules/sitecore-headless-services-xm1-assets:21.0-1809
 TOOLS_IMAGE=scr.sitecore.com/tools/sitecore-docker-tools-assets:10.2.0-1809
 TRAEFIK_IMAGE=traefik:v2.2.0-windowsservercore-1809
+SPE_SERVICES_IMAGE=scr.sitecore.com/sxp/modules/sitecore-spe-assets:6.4-1809
+SXA_SERVICES_IMAGE=scr.sitecore.com/sxp/modules/sitecore-sxa-xm1-assets:10.3-1809
 
 # MSBuild configuration and the target build stage for the Rendering Host image.
 BUILD_CONFIGURATION=debug
