--- a/run/sitecore-xm1/docker-compose.override.yml
+++ b/run/sitecore-xm1/docker-compose.override.yml
@@ -96,6 +96,7 @@ services:
       args:
         PARENT_IMAGE: ${SITECORE_DOCKER_REGISTRY}sitecore-xm1-mssql-init:${SITECORE_VERSION}
         HEADLESS_SERVICES_IMAGE: ${HEADLESS_SERVICES_IMAGE}
+        SPE_RESOURCES_IMAGE: ${SPE_SERVICES_IMAGE}
 
   # Some modules (like SXA) also require additions to the Solr image.
   solr:
@@ -112,6 +113,7 @@ services:
       context: ../../docker/build/solr-init
       args:
         PARENT_IMAGE: ${SITECORE_DOCKER_REGISTRY}sitecore-xm1-solr-init:${SITECORE_VERSION}
+        SXA_IMAGE: ${SXA_SERVICES_IMAGE}
 
   # Use our retagged Identity Server image.
   # Configure for a mounted license file instead of using SITECORE_LICENSE.
@@ -139,6 +141,7 @@ services:
         TOOLS_IMAGE: ${TOOLS_IMAGE}
         MANAGEMENT_SERVICES_IMAGE: ${MANAGEMENT_SERVICES_IMAGE}
         HEADLESS_SERVICES_IMAGE: ${HEADLESS_SERVICES_IMAGE}
+        SXA_IMAGE: ${SXA_SERVICES_IMAGE}
     depends_on:
       - solution
     volumes:
@@ -160,6 +163,8 @@ services:
         TOOLS_IMAGE: ${TOOLS_IMAGE}
         MANAGEMENT_SERVICES_IMAGE: ${MANAGEMENT_SERVICES_IMAGE}
         HEADLESS_SERVICES_IMAGE: ${HEADLESS_SERVICES_IMAGE}
+        SPE_RESOURCES_IMAGE: ${SPE_SERVICES_IMAGE}
+        SXA_IMAGE: ${SXA_SERVICES_IMAGE}
     depends_on:
       - solution
     volumes:
