--- a/src/items/content/sxa/sxa/Presentation/Page Designs/Home.yml
+++ b/src/items/content/sxa/sxa/Presentation/Page Designs/Home.yml
@@ -1,8 +1,8 @@
 ﻿---
-ID: "5dbbc586-b7f4-4c94-abc8-565ca3758e34"
+ID: "474feb58-8d1b-4ea0-b7a1-5b57ecd78620"
 Parent: "dfeb97b5-7b40-4be5-8ea7-12f07a642790"
 Template: "9b3fd731-eb22-481e-b648-b1e10796b1a4"
-Path: /sitecore/content/sxa/sxa/Presentation/Page Designs/Default
+Path: /sitecore/content/sxa/sxa/Presentation/Page Designs/Home
 SharedFields:
 - ID: "0966b999-0d0e-4278-acc9-9da69d461fe6"
   Hint: PartialDesigns
@@ -14,22 +14,14 @@ Languages:
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20240201T154000Z
-    - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
-      Hint: __Owner
-      Value: |
-        sitecore\Admin
-    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
-      Hint: __Created by
-      Value: |
-        sitecore\Admin
+      Value: 20240204T143329Z
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "ac8ef8b9-71c9-45f2-bac7-5ae8872bc496"
+      Value: "376678ca-0d07-4fa2-ac39-f5d05dd741d8"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
         sitecore\Admin
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20240204T143546Z
+      Value: 20240204T143423Z
