--- a/src/items/content/sxa/sxa.yml
+++ b/src/items/content/sxa/sxa.yml
@@ -47,6 +47,7 @@ SharedFields:
     {4E3A13D1-DF8F-4C7F-9405-AC74AF29C47B}
     {53BDAF49-B151-4F42-A1E7-043C397123D9}
     {46D0AA2D-2804-4ECA-92B2-956D623EE44C}
+    {0E9F9B46-48F9-4FDB-970D-91A970B2C550}
 - ID: "33d9005e-1f71-415f-b107-53b965c3b037"
   Hint: SiteMediaLibrary
   Value: "{49EB670B-2961-4676-B662-8F59F87FF6B5}"
@@ -77,11 +78,11 @@ Languages:
         sitecore\Admin
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "8e0d52d0-380c-4234-9481-bcaf67516eec"
+      Value: "3e40ae8f-7bf2-435e-97d5-53915648a53a"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
         sitecore\Admin
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20240201T154001Z
+      Value: 20240204T164217Z
