--- a/src/items/branches-feature/SXA/Text Teaser/Default Text Teaser Variant/_name/Default/Headline Column/Subheadline.yml
+++ b/src/items/branches-feature/SXA/Text Teaser/Default Text Teaser Variant/_name/Default/Headline Column/Subheadline.yml
@@ -1,15 +1,18 @@
 ﻿---
-ID: "dd217dd6-5dd5-45bf-b604-fc9ef3128891"
-Parent: "d8e28f2f-dd23-42f7-a964-aa5c3c590392"
-Template: "39a9ed72-407d-4440-ba50-30956834794e"
-Path: /sitecore/content/sxa/sxa/Presentation/Available Renderings
+ID: "c173600d-33a4-4f51-a502-87ee05b643ff"
+Parent: "53d89438-76c8-4737-8ce1-741496373f4b"
+Template: "fcd285da-9ab2-4c8d-b185-5a7487a9ba1b"
+Path: /sitecore/templates/Branches/Feature/SXA/Text Teaser/Default Text Teaser Variant/$name/Default/Headline Column/Subheadline
 SharedFields:
-- ID: "7147ca94-cd06-4aba-8af3-e179a24f4de5"
-  Hint: IsShared
+- ID: "4753764c-c05a-4623-841b-97f85135241c"
+  Hint: FieldName
+  Value: Subheadline
+- ID: "db805bdc-8eec-4238-b174-2427b6f1f077"
+  Hint: Tag
+  Value: "{AD7A95FD-05D0-484E-8AFB-FB1DDD5F44AB}"
+- ID: "fe56eae5-d6a1-4703-92f7-4862da6deac8"
+  Hint: RenderIfEmpty
   Value: 
-- ID: "878c9a33-e760-4cb8-aad3-b2309383bf10"
-  Hint: Group renderings in sections
-  Value: 1
 Languages:
 - Language: en
   Versions:
@@ -17,7 +20,7 @@ Languages:
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20240201T153858Z
+      Value: 20240204T163921Z
     - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
       Hint: __Owner
       Value: |
@@ -28,11 +31,11 @@ Languages:
         sitecore\Admin
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "e97f0173-5f90-4482-a6a8-9d023ae6e70b"
+      Value: "e8edf92c-345a-4f07-bdb7-3984f9ea57a2"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
         sitecore\Admin
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20240204T164610Z
+      Value: 20240204T163933Z
