--- a/src/items/content/sxa/sxa/Presentation/Rendering Variants/Text Teaser/Default.yml
+++ b/src/items/content/sxa/sxa/Presentation/Rendering Variants/Text Teaser/Default.yml
@@ -1,15 +1,13 @@
 ﻿---
-ID: "dd217dd6-5dd5-45bf-b604-fc9ef3128891"
-Parent: "d8e28f2f-dd23-42f7-a964-aa5c3c590392"
-Template: "39a9ed72-407d-4440-ba50-30956834794e"
-Path: /sitecore/content/sxa/sxa/Presentation/Available Renderings
+ID: "d941518f-4713-46ed-b244-f97ceec93a42"
+Parent: "6bbbbc9e-3e55-4842-b976-d269e67db9c3"
+Template: "fb3e3034-33f8-4ce8-be98-dd05010f4c22"
+Path: /sitecore/content/sxa/sxa/Presentation/Rendering Variants/Text Teaser/Default
+BranchID: "67ba6cb6-f72f-4455-94dc-553603b6114c"
 SharedFields:
-- ID: "7147ca94-cd06-4aba-8af3-e179a24f4de5"
-  Hint: IsShared
-  Value: 
-- ID: "878c9a33-e760-4cb8-aad3-b2309383bf10"
-  Hint: Group renderings in sections
-  Value: 1
+- ID: "f6d8a61c-2f84-4401-bd24-52d2068172bc"
+  Hint: __Originator
+  Value: "{701D8DEA-D2F7-489E-825B-89C41273F11A}"
 Languages:
 - Language: en
   Versions:
@@ -17,7 +15,7 @@ Languages:
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20240201T153858Z
+      Value: 20240204T164216Z
     - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
       Hint: __Owner
       Value: |
@@ -28,11 +26,11 @@ Languages:
         sitecore\Admin
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "e97f0173-5f90-4482-a6a8-9d023ae6e70b"
+      Value: "6e6f54b2-24dd-49ad-8097-3cad37ef6dbc"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
         sitecore\Admin
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20240204T164610Z
+      Value: 20240204T164216Z
