--- a/src/items/placeholders/SXA.yml
+++ b/src/items/placeholders/SXA.yml
@@ -1,15 +1,8 @@
 ﻿---
-ID: "dd217dd6-5dd5-45bf-b604-fc9ef3128891"
-Parent: "d8e28f2f-dd23-42f7-a964-aa5c3c590392"
-Template: "39a9ed72-407d-4440-ba50-30956834794e"
-Path: /sitecore/content/sxa/sxa/Presentation/Available Renderings
-SharedFields:
-- ID: "7147ca94-cd06-4aba-8af3-e179a24f4de5"
-  Hint: IsShared
-  Value: 
-- ID: "878c9a33-e760-4cb8-aad3-b2309383bf10"
-  Hint: Group renderings in sections
-  Value: 1
+ID: "b6b03a1c-c9f4-4d1d-89fc-465377cf0ff4"
+Parent: "1b59149d-7ed3-4d58-86a9-32eded8c0368"
+Template: "c3b037a0-46e5-4b67-ac7a-a144b962a56f"
+Path: /sitecore/layout/Placeholder Settings/Feature/SXA
 Languages:
 - Language: en
   Versions:
@@ -17,7 +10,7 @@ Languages:
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20240201T153858Z
+      Value: 20240204T144846Z
     - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
       Hint: __Owner
       Value: |
@@ -28,11 +21,11 @@ Languages:
         sitecore\Admin
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "e97f0173-5f90-4482-a6a8-9d023ae6e70b"
+      Value: "c5edca8e-4e6b-4096-89ed-3e1e87c45ac4"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
         sitecore\Admin
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20240204T164610Z
+      Value: 20240204T144846Z
