--- a/src/items/content/SXA Tutorial/sxa/Settings/Site Grouping/sxa.yml
+++ b/src/items/content/SXA Tutorial/sxa/Settings/Site Grouping/sxa.yml
@@ -10,7 +10,7 @@ SharedFields:
   Value: "{B1089A79-9520-45B6-9D72-B584BC07B077}"
 - ID: "8e0dd914-9afb-4d45-bf8b-7ff5d6e5337e"
   Hint: HostName
-  Value: www.sxa.localhost
+  Value: cd.sxa.localhost
 - ID: "cb4e9e2e-2b66-43dc-ad3f-9caf363d28d3"
   Hint: SiteName
   Value: sxa
@@ -38,11 +38,11 @@ Languages:
         sitecore\Admin
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "262a7430-717e-45d9-b70c-d64dd67aa164"
+      Value: "cd9da21e-54c0-4968-9b9f-81d4a694d86f"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
         sitecore\Admin
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20240201T154000Z
+      Value: 20240205T190142Z
