Adjust services fields

--- a/src/items/templates-feature/SXA Tutorial/Services/Services Detail/Teaser.yml
+++ b/src/items/templates-feature/SXA Tutorial/Services/Services Detail/Teaser.yml
@@ -1,15 +1,8 @@
 ﻿---
-ID: "67326763-14e1-4af5-b541-7f9be30b4df5"
-Parent: "b5bf135b-3c94-4e0d-b8da-4487ba3a2449"
-Template: "455a3e98-a627-4b40-8035-e683a0331ac7"
-Path: /sitecore/templates/Project/SXA Tutorial/Services Detail/Teaser/Teaser Description
-SharedFields:
-- ID: "ab162cc0-dc80-4abf-8871-998ee5d7ba32"
-  Hint: Type
-  Value: "Single-Line Text"
-- ID: "ba3f86a2-4a1c-4d78-b63d-91c2779c1b5e"
-  Hint: __Sortorder
-  Value: 200
+ID: "b5bf135b-3c94-4e0d-b8da-4487ba3a2449"
+Parent: "5215fd81-82d7-4d06-9eae-a5429c2caabc"
+Template: "e269fbb5-3750-427a-9149-7aa950b49301"
+Path: /sitecore/templates/Feature/SXA Tutorial/Services/Services Detail/Teaser
 Languages:
 - Language: en
   Versions:
@@ -28,11 +21,11 @@ Languages:
         sitecore\Admin
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "9be462d5-7533-4993-9d99-fc05c0edb763"
+      Value: "de5df53b-2e5e-4dc9-95bc-22be9c3decb7"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
         sitecore\Admin
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20240206T122449Z
+      Value: 20240206T122448Z
