--- a/src/items/branches-feature/SXA Tutorial/Services/Default Services Variant/_name/Default/Services/column/Teaser Image.yml
+++ b/src/items/branches-feature/SXA Tutorial/Services/Default Services Variant/_name/Default/Services/column/Teaser Image.yml
@@ -1,12 +1,12 @@
 ﻿---
-ID: "5b4ff8bd-ec7d-4a8c-98be-9cb12bd3d816"
-Parent: "0524e6c2-b09c-4f18-aa8b-9c2f6ad6d888"
+ID: "388d9a45-e633-4804-bc41-9bed5acabd11"
+Parent: "1e42be92-5731-4f3e-ba89-3dbe2f342acf"
 Template: "fcd285da-9ab2-4c8d-b185-5a7487a9ba1b"
-Path: /sitecore/templates/Branches/Feature/SXA Tutorial/Services/Default Services Variant/$name/Default/Promo Text/Promo Link
+Path: /sitecore/templates/Branches/Feature/SXA Tutorial/Services/Default Services Variant/$name/Default/Services/column/Teaser Image
 SharedFields:
 - ID: "4753764c-c05a-4623-841b-97f85135241c"
   Hint: FieldName
-  Value: PromoLink
+  Value: Teaser Image
 - ID: "ba3f86a2-4a1c-4d78-b63d-91c2779c1b5e"
   Hint: __Sortorder
   Value: 300
@@ -17,14 +17,22 @@ Languages:
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20160427T134751Z
+      Value: 20240206T134020Z
+    - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
+      Hint: __Owner
+      Value: |
+        sitecore\Admin
+    - ID: "5dd74568-4d4b-44c1-b513-0af5f4cda34f"
+      Hint: __Created by
+      Value: |
+        sitecore\Admin
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "47c1dc4a-05e8-4764-ba5c-5e235086b222"
+      Value: "4364c70c-7373-4005-9cb9-690c506169b2"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
         sitecore\Admin
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20240206T131512Z
+      Value: 20240206T134023Z
