--- a/src/items/content/SXA Tutorial/sxa/Presentation/Page Designs.yml
+++ b/src/items/content/SXA Tutorial/sxa/Presentation/Page Designs.yml
@@ -7,7 +7,7 @@ BranchID: "b90549b5-c997-4d6b-b102-c9ab82528974"
 SharedFields:
 - ID: "ba1f60d6-3deb-40cc-bb61-eec772279ee1"
   Hint: TemplatesMapping
-  Value: "%7bF17FE98C-62F1-4B04-B84D-86759214BCEC%7d%3d%257B474FEB58-8D1B-4EA0-B7A1-5B57ECD78620%257D%26%7bF8D648A9-A449-4771-A8F8-951332461B02%7d%3d%257B5DBBC586-B7F4-4C94-ABC8-565CA3758E34%257D"
+  Value: "%7bF17FE98C-62F1-4B04-B84D-86759214BCEC%7d%3d%257B474FEB58-8D1B-4EA0-B7A1-5B57ECD78620%257D%26%7bF8D648A9-A449-4771-A8F8-951332461B02%7d%3d%257B5DBBC586-B7F4-4C94-ABC8-565CA3758E34%257D%26%7b0DB1AAB6-160A-401D-973D-35A45548B1FD%7d%3d%257B5DBBC586-B7F4-4C94-ABC8-565CA3758E34%257D%26%7b5215FD81-82D7-4D06-9EAE-A5429C2CAABC%7d%3d%257B5DBBC586-B7F4-4C94-ABC8-565CA3758E34%257D"
 - ID: "c0c88e34-d7e6-46a0-b84f-b0a432d11642"
   Hint: Theme
   Value: "%7bFE5D7FDF-89C0-4D99-9AA3-B5FBD009C9F3%7d%3d%257BE99B315F-8C89-4419-A84F-BE1005EF2DDC%257D"
@@ -32,11 +32,11 @@ Languages:
         sitecore\Admin
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "7df16e50-7c1e-42ba-83fd-8f4dbe55331c"
+      Value: "98f2d553-c566-4b7f-8ba4-61d607f62d7d"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
         sitecore\Admin
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20240204T143523Z
+      Value: 20240206T140026Z
