--- a/src/items/templates-project/SXA Tutorial/Services Detail/Teaser.yml
+++ b/src/items/templates-project/SXA Tutorial/Services Detail/Teaser.yml
@@ -1,15 +1,8 @@
 ﻿---
-ID: "59fbdd7e-ffcf-4811-bd4b-b414edc77fe1"
-Parent: "b5bf135b-3c94-4e0d-b8da-4487ba3a2449"
-Template: "455a3e98-a627-4b40-8035-e683a0331ac7"
-Path: /sitecore/templates/Feature/SXA Tutorial/Services/Services Detail/Teaser/Teaser Headline
-SharedFields:
-- ID: "ab162cc0-dc80-4abf-8871-998ee5d7ba32"
-  Hint: Type
-  Value: "Single-Line Text"
-- ID: "ba3f86a2-4a1c-4d78-b63d-91c2779c1b5e"
-  Hint: __Sortorder
-  Value: 100
+ID: "b5bf135b-3c94-4e0d-b8da-4487ba3a2449"
+Parent: "5215fd81-82d7-4d06-9eae-a5429c2caabc"
+Template: "e269fbb5-3750-427a-9149-7aa950b49301"
+Path: /sitecore/templates/Project/SXA Tutorial/Services Detail/Teaser
 Languages:
 - Language: en
   Versions:
@@ -28,7 +21,7 @@ Languages:
         sitecore\Admin
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "8395cd58-1c1c-42b2-bd3b-e8336060069e"
+      Value: "de5df53b-2e5e-4dc9-95bc-22be9c3decb7"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
