--- a/src/items/content/SXA Tutorial/sxa/Presentation/Rendering Variants/Services/Default/Services Description.yml
+++ b/src/items/content/SXA Tutorial/sxa/Presentation/Rendering Variants/Services/Default/Services Description.yml
@@ -1,12 +1,16 @@
 ﻿---
-ID: "b17c0585-320f-4feb-a1d9-e6ae232d76d5"
-Parent: "6080b90b-5fba-41bc-b4e7-292fe6efcf61"
+ID: "482f9073-5879-44e1-9897-cab9ad851613"
+Parent: "3151d972-ff0a-4916-903d-bc4c1bbf2d97"
 Template: "fcd285da-9ab2-4c8d-b185-5a7487a9ba1b"
-Path: /sitecore/templates/Branches/Feature/SXA Tutorial/Services/Default Services Variant/$name/Default/Services Descripion
+Path: /sitecore/content/SXA Tutorial/sxa/Presentation/Rendering Variants/Services/Default/Services Description
+BranchID: "a65c3b05-28b8-4b92-bfdf-e034076e6e8d"
 SharedFields:
 - ID: "4753764c-c05a-4623-841b-97f85135241c"
   Hint: FieldName
-  Value: Services Descripion
+  Value: Services Description
+- ID: "f6d8a61c-2f84-4401-bd24-52d2068172bc"
+  Hint: __Originator
+  Value: "{B17C0585-320F-4FEB-A1D9-E6AE232D76D5}"
 - ID: "fe56eae5-d6a1-4703-92f7-4862da6deac8"
   Hint: RenderIfEmpty
   Value: 
@@ -17,7 +21,7 @@ Languages:
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20240206T132728Z
+      Value: 20240206T134826Z
     - ID: "52807595-0f8f-4b20-8d2a-cb71d28c6103"
       Hint: __Owner
       Value: |
@@ -28,11 +32,11 @@ Languages:
         sitecore\Admin
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "a3661971-2cf9-45a2-a8ed-e2b5bcab3faf"
+      Value: "a9bbe0aa-faf8-41b8-a471-23cebc48c2e4"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
         sitecore\Admin
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20240206T133737Z
+      Value: 20240206T150310Z
