--- a/src/items/content/SXA Tutorial/sxa/Home/Services.yml
+++ b/src/items/content/SXA Tutorial/sxa/Home/Services.yml
@@ -3,11 +3,30 @@ ID: "4fccf9fc-f125-42ae-b72d-f7007319b89f"
 Parent: "b1089a79-9520-45b6-9d72-b584bc07b077"
 Template: "0db1aab6-160a-401d-973d-35a45548b1fd"
 Path: /sitecore/content/SXA Tutorial/sxa/Home/Services
+SharedFields:
+- ID: "f1a1fe9e-a60c-4ddb-a3a0-bb5b29fe732e"
+  Hint: __Renderings
+  Value: |
+    <r xmlns:p="p" xmlns:s="s"
+      p:p="1">
+      <d
+        id="{FE5D7FDF-89C0-4D99-9AA3-B5FBD009C9F3}">
+        <r
+          uid="{12BEB2EA-5F6F-4B1E-8D74-FECD62850E93}"
+          s:ds="{47006D7E-74A1-476B-A2F0-F5CB34F03A5A}"
+          s:id="{DF3FD36C-6461-41B7-B7DA-B239168E06AD}"
+          s:par="Reset Caching Options&amp;GridParameters=%7B7465D855-992E-4DC2-9855-A03250DFA74B%7D&amp;FieldNames=%7B3151D972-FF0A-4916-903D-BC4C1BBF2D97%7D&amp;Styles&amp;CacheClearingBehavior=Clear%20on%20publish&amp;RenderingIdentifier&amp;DynamicPlaceholderId=1"
+          s:ph="main" />
+      </d>
+    </r>
 Languages:
 - Language: en
   Versions:
   - Version: 1
     Fields:
+    - ID: "001dd393-96c5-490b-924a-b0f25cd9efd8"
+      Hint: __Lock
+      Value: <r />
     - ID: "17ae4698-9e7b-4d8f-97bd-53e8c1d78848"
       Hint: Title
       Value: Services
@@ -19,11 +38,11 @@ Languages:
       Value: Services
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "32e8bbe2-2443-4c68-8f8d-a2406faf1bc2"
+      Value: "bcf2f399-ebbd-48c1-8f37-3d1a5ae62c3a"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
         sitecore\Admin
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20240206T135251Z
+      Value: 20240206T141653Z
