--- a/src/items/renderings/SXA Tutorial/Services/Services.yml
+++ b/src/items/renderings/SXA Tutorial/Services/Services.yml
@@ -16,6 +16,9 @@ SharedFields:
 - ID: "34e81e40-1d4d-45b0-bcf1-a0ffe5521685"
   Hint: RenderingCssClass
   Value: services
+- ID: "49b9d6c5-9551-4ba4-840e-74d5582256c0"
+  Hint: RenderingViewPath
+  Value: ~/Views/Services/Services.cshtml
 - ID: "94069f66-609c-48b0-8281-521c30fb269d"
   Hint: Open Properties after Add
   Value: 0
@@ -47,11 +50,11 @@ Languages:
       Value: 20150116T151025Z
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "297b24d1-3db8-411d-83ee-b36b2760a818"
+      Value: "7f4acbe4-c2a6-4df6-a45b-10e432ecf70c"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
         sitecore\Admin
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20240206T131510Z
+      Value: 20240206T144352Z
